...
    <item
        android:id="@+id/homeItem"
        android:title="Home"
        android:orderInCategory="2"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/profileItem"
        android:title="Profile"
        android:orderInCategory="3"
        android:icon="@drawable/profile" />

</menu>
