<resources>
    <string name="app_name">Rent A Help</string>
    <string name="preferences_file_name" translatable="false">com.example.androidassignments.user_prefs</string>
    <string name="preferences_email_key" translatable="false">Email</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="email_text">Email</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="account_exists_text">Already have an account?</string>
    <string name="account_not_exists_text">Don\'t have an account?</string>
    <string name="login_now_text">Login Now</string>
    <string name="register_now_text">Register Now</string>
    <string name="choose_title">Services</string>
</resources>